# jm21cma

./: .gitignore  Cargo.toml  README.md  default.nix
data/: 21cma_lp.nec  21cma_station.yaml
scripts/: calc_array_beam_patch.sh  calc_single_ant_beam.sh
src/: arbitrary_array.rs  cfg.rs  constants.rs  dipole.rs  lib.rs  main.rs  single_ant_model.rs  utils.rs
