[package]
name = "jm21cma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num={version='0.4.0'}
clap={version='4.1.8', features = ['derive']}
serde_yaml = '0.9.19'
ndarray='0.15.4'
fitsio={version='0.21.2', features=[]}
pest='2.4.0'
healpix_fits={git="https://github.com/astrojhgu/healpix_fits.git"}
necrs={git="https://github.com/astrojhgu/necrs.git"}

[dependencies.serde]
features = ['derive']
version = '1.0.136'

[dependencies.scorus]
git="https://github.com/astrojhgu/scorus.git"
