[dependencies]
ndarray = '0.15.6'
pest = '2.7.8'
serde_yaml = '0.9.34+deprecated'

[dependencies.clap]
features = ['derive']
version = '4.5.4'

[dependencies.fitsio]
features = []
version = '0.21.2'

[dependencies.healpix_fits]
path = '../healpix_fits'

[dependencies.necrs]
path = '../necrs'

[dependencies.num]
version = '0.4.1'

[dependencies.scorus]
path = '../scorus'

[dependencies.serde]
features = ['derive']
version = '1.0.197'

[package]
edition = '2021'
name = 'jm21cma'
version = '0.1.0'
